# FastVulkan

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp
src/Core/Logging/: Log.ixx
